rust/macros/tests/invalid/target/rls/debug/deps/only_comma_rs-4a8234d4aaabff2e.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_comma_rs-4a8234d4aaabff2e.rmeta: only-comma.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_comma_rs-4a8234d4aaabff2e.d: only-comma.rs

only-comma.rs:
